# api/swagger.yml
@@ -74,7 +74,7 @@ paths:
                 properties:
                   code:
                     type: integer
-                    format: int32  
+                    format: int32
   /getUserInfo:
     get:
       tags:
@@ -82,6 +82,34 @@ paths:
       summary: Get User Info
       description: Return a list of mock.
       operationId: getUserInfo
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    format: int32
+                  data:
+                    type: object
+                    properties:
+                      total:
+                        type: integer
+                        format: int32
+                      items:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/User'
+  /getStockInfo:
+    get:
+      tags:
+        - getStockInfo
+      summary: Get Stock Info
+      description: Return a list of mock.
+      operationId: getStockInfo
       responses:
         200:
           description: OK
